--- a/assets/scss/components/_tab-panel.scss
+++ b/assets/scss/components/_tab-panel.scss
@@ -24,6 +24,8 @@
   }
 
   &__inkbar {
+    display: block;
+    z-index: 999;
     position: absolute;
     bottom: 0;
     left: 0;
